kustomization/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workspace
  name: workspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  strategy: {}
  template:
    metadata:
      labels:
        app: workspace
    spec:
      containers:
      - image: harbor.edgestream.net/library/workspace:latest
        imagePullPolicy: Always
        name: workspace
        securityContext: {
          privileged: true
        }
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: workspace-data
          mountPath: /root
        - mountPath: /var/run/docker.sock
          name: docker-sock
          readOnly: false
      volumes:
      - name: workspace-data
        persistentVolumeClaim:
          claimName: workspace-data
          readOnly: false
      - name: docker-sock
        hostPath:
          path: "/var/run/docker.sock"
      terminationGracePeriodSeconds: 0
      serviceAccountName: workspace
