kustomization/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workspace
  name: workspace
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: workspace
  type: ClusterIP
