kustomization/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app: workspace
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: workspace
  namespace: default
spec:
  rules:
  - host: workspace.edgestream.net
    http:
      paths:
      - backend:
          service:
            name: workspace
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - workspace.edgestream.net
    secretName: workspace-tls
